--- a/public.html
+++ b/public.html
@@ -4,7 +4,7 @@
   <ul>
     <li><a href="http://rm.66rpg.com/?291206">返回空间</a></li>
     <li><a href="list.html">脚本列表</a></li>
-    <!-- <li><a href="order.html">脚本定制</a></li> -->
+    <li><a href="order.html">脚本定制</a></li>
   </ul>
 </div></div>
 
