--- a/list.html
+++ b/list.html
@@ -63,72 +63,70 @@
     </p>
   </div></div>
 
-  <div id="content" class="viewport">
-
+  <div id="content">
     <header id="header"></header>
-
-    <div id="rule">
-      <div class="big-title">
-        <h1>脚本使用规约</h1>
-        <p class="title-hint">使用我的脚本即表示您已同意并将遵守如下规定。</p>
-      </div>
-      <div class="card">
-        <div class="image-list">
-          <a href="http://rmtemp.lofter.com/post/3e26fe_156e50a" target="_blank">
-            <img src="img/rule/1.jpg" alt="基本规则-点击查看详情" /></a>
-          <a href="http://rmtemp.lofter.com/post/3e26fe_156f11b" target="_blank">
-            <img src="img/rule/2.jpg" alt="自由的用于任何游戏中-点击查看详情" /></a>
-          <a href="http://rmtemp.lofter.com/post/3e26fe_156f16f" target="_blank">
-            <img src="img/rule/3.jpg" alt="不需要报告-点击查看详情" /></a>
-          <a href="http://rmtemp.lofter.com/post/3e26fe_156e513" target="_blank">
-            <img src="img/rule/4.jpg" alt="不需要署名-点击查看详情" /></a>
-          <a href="http://rmtemp.lofter.com/post/3e26fe_156f131" target="_blank">
-            <img src="img/rule/5.jpg" alt="允许加工-点击查看详情" /></a>
-          <a href="http://rmtemp.lofter.com/post/3e26fe_156f1c7" target="_blank">
-            <img src="img/rule/6.jpg" alt="允许自由的二次配布-点击查看详情" /></a>
+    <div class="viewport">
+      <div id="rule">
+        <div class="big-title">
+          <h1>脚本使用规约</h1>
+          <p class="title-hint">使用我的脚本即表示您已同意并将遵守如下规定。</p>
         </div>
-        <ul class="rule-list">
-          <li>用于收费游戏或者参加比赛的游戏中时要求署名（署名格式：喵呜喵5）。</li>
-          <li>如果免费游戏附带有使用的素材列表的话（例如在游戏ED、游戏介绍文档、游戏发布帖中）则要求署名（署名格式：喵呜喵5）。</li>
-          <li>脚本开头的说明中如果有特殊的使用协议的话，以脚本说明中的使用协议为准。</li>
-          <li>禁止以脚本合集的方式转载我的脚本。</li>
-          <li>在未说明的情况下，这些脚本只适用于RPG制作大师VA的默认工程。在使用脚本过程中遇到了任何问题请将问题详情在对应脚本的下方进行回复。</li>
-          <li>对于那些已经被我删除的脚本，你可以自由的使用而不需要遵守上述规约。</li>
-        </ul>
-      </div>
-    </div>
-    <div id="list">
-      <div class="big-title">
-        <h1>脚本列表</h1>
-        <p class="title-hint">标注☆号的脚本必须加入基础脚本后才能使用，标注★号的脚本拥有特殊的使用规约，请事先进行确认。</p>
-        <div class="update_hint">
-          <p class="no-hover"><span class="update_time"></span>更新了哟！</p>
-          <p class="hover">此次更新不再提醒</p>
+        <div class="card">
+          <div class="image-list">
+            <a href="http://rmtemp.lofter.com/post/3e26fe_156e50a" target="_blank">
+              <img src="img/rule/1.jpg" alt="基本规则-点击查看详情" /></a>
+            <a href="http://rmtemp.lofter.com/post/3e26fe_156f11b" target="_blank">
+              <img src="img/rule/2.jpg" alt="自由的用于任何游戏中-点击查看详情" /></a>
+            <a href="http://rmtemp.lofter.com/post/3e26fe_156f16f" target="_blank">
+              <img src="img/rule/3.jpg" alt="不需要报告-点击查看详情" /></a>
+            <a href="http://rmtemp.lofter.com/post/3e26fe_156e513" target="_blank">
+              <img src="img/rule/4.jpg" alt="不需要署名-点击查看详情" /></a>
+            <a href="http://rmtemp.lofter.com/post/3e26fe_156f131" target="_blank">
+              <img src="img/rule/5.jpg" alt="允许加工-点击查看详情" /></a>
+            <a href="http://rmtemp.lofter.com/post/3e26fe_156f1c7" target="_blank">
+              <img src="img/rule/6.jpg" alt="允许自由的二次配布-点击查看详情" /></a>
+          </div>
+          <ul class="rule-list">
+            <li>用于收费游戏或者参加比赛的游戏中时要求署名（署名格式：喵呜喵5）。</li>
+            <li>如果免费游戏附带有使用的素材列表的话（例如在游戏ED、游戏介绍文档、游戏发布帖中）则要求署名（署名格式：喵呜喵5）。</li>
+            <li>脚本开头的说明中如果有特殊的使用协议的话，以脚本说明中的使用协议为准。</li>
+            <li>禁止以脚本合集的方式转载我的脚本。</li>
+            <li>在未说明的情况下，这些脚本只适用于RPG制作大师VA的默认工程。在使用脚本过程中遇到了任何问题请将问题详情在对应脚本的下方进行回复。</li>
+            <li>对于那些已经被我删除的脚本，你可以自由的使用而不需要遵守上述规约。</li>
+          </ul>
         </div>
       </div>
+      <div id="list">
+        <div class="big-title">
+          <h1>脚本列表</h1>
+          <p class="title-hint">标注☆号的脚本必须加入基础脚本后才能使用，标注★号的脚本拥有特殊的使用规约，请事先进行确认。</p>
+          <div class="update_hint">
+            <p class="no-hover"><span class="update_time"></span>更新了哟！</p>
+            <p class="hover">此次更新不再提醒</p>
+          </div>
+        </div>
 
-      <div class="script-list">
-        <div class="last_update"><h2 class="toggle-button">更新记录</h2><div class="show_area card"></div></div>
-        <div class="base"><h2 class="toggle-button">基础脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="message"><h2 class="toggle-button">对话类脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="map"><h2 class="toggle-button">地图类脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="event"><h2 class="toggle-button">事件类脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="system"><h2 class="toggle-button">系统类脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="battle"><h2 class="toggle-button">战斗类脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="menu"><h2 class="toggle-button">菜单类脚本</h2><div class="show_area card"><ul></ul></div></div>
-        <div class="others"><h2 class="toggle-button">其他脚本</h2><div class="show_area card"><ul></ul></div></div>
+        <div class="script-list">
+          <div class="last_update"><h2 class="toggle-button">更新记录</h2><div class="show_area card"></div></div>
+          <div class="base"><h2 class="toggle-button">基础脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="message"><h2 class="toggle-button">对话类脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="map"><h2 class="toggle-button">地图类脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="event"><h2 class="toggle-button">事件类脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="system"><h2 class="toggle-button">系统类脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="battle"><h2 class="toggle-button">战斗类脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="menu"><h2 class="toggle-button">菜单类脚本</h2><div class="show_area card"><ul></ul></div></div>
+          <div class="others"><h2 class="toggle-button">其他脚本</h2><div class="show_area card"><ul></ul></div></div>
+        </div>
       </div>
-    </div>
-    <div id="comment">
-      <div class="big-title">
-        <h1>发射言弹</h1>
-        <p class="title-hint">您的留言将被公开展示在这里。</p>
+      <div id="comment">
+        <div class="big-title">
+          <h1>发射言弹</h1>
+          <p class="title-hint">您的留言将被公开展示在这里。</p>
+        </div>
+        <div class="card"><div class="ds-thread"></div></div>
       </div>
-      <div class="card"><div class="ds-thread"></div></div>
+      <footer id="footer"></footer>
     </div>
-
-    <footer id="footer"></footer>
-
   </div>
 
   <script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
