--- a/order.html
+++ b/order.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="style/global.css">
   <style>
-    #content{ display: none; }
     #introduce .card p{
       text-indent: 1em;
       word-break: break-all;
@@ -115,20 +114,13 @@
           </ul>
         </div>
       </div>
-      <div id="comment">
-        <div class="big-title">
-          <h1>发射言弹</h1>
-          <p class="title-hint">您的留言将被公开展示在这里。</p>
-        </div>
-        <div class="card"><div class="ds-thread"></div></div>
-      </div>
+      <div id="comment"></div>
       <footer id="footer"></footer>
     </div>
 
   </div>
 
   <script src="//cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-  <!-- <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script> -->
   <script type="text/javascript">
     !window.jQuery && document.write('<script src="js/jquery.js"><\/script>');
   </script>
