--- a/order.html
+++ b/order.html
@@ -9,6 +9,8 @@
   <style>
     #introduce .card p{
       text-indent: 1em;
+    }
+    #introduce p.special-style{
       word-break: break-all;
     }
     #rule li{
@@ -50,7 +52,7 @@
           <h2 class="card-inline-title">接受脚本定制</h2>
           <p>收费接受 RGSS3(RMVA) 脚本定制，脚本定制仅作为业余爱好，所以收费一般为一顿饭或几顿饭的价格，太过复杂、太过麻烦，需要花太多时间的脚本请容许我拒绝。
           一般界面UI类脚本（不包含美术设计）或者对话、信息显示类脚本都会接受，系统太过庞大（例如战旗、音游、或者基于 SideView 的深度修改）的脚本则无能为力。</p>
-          <p>若需定制，请将相应的要求发送到我的邮箱：<a class="normal-link" href="mailto:miaowm5@gmail.com?subject=脚本定制&body=请附上详细的脚本定制要求，若能包含图片的话更佳">miaowm5@gmail.com</a></p>
+          <p class="special-style">若需定制，请将相应的要求发送到我的邮箱：<a class="normal-link" href="mailto:miaowm5@gmail.com?subject=脚本定制&body=请附上详细的脚本定制要求，若能包含图片的话更佳">miaowm5@gmail.com</a></p>
         </div>
       </div>
       <div id="rule">
