change some rule and add busy state

--- a/order.html
+++ b/order.html
@@ -21,6 +21,8 @@
       color: #999;
       text-indent: 2em;
     }
+    #introduce h2.card-inline-title.special-style{ color: #FF4800; }
+    #introduce p span{ color: #999; }
   </style>
   <script src='js/modernizr.js'></script>
 </head>
@@ -53,6 +55,9 @@
           <p>收费接受 RGSS3(RMVA) 脚本定制，脚本定制仅作为业余爱好，所以收费一般为一顿饭或几顿饭的价格，太过复杂、太过麻烦，需要花太多时间的脚本请容许我拒绝。
           一般界面UI类脚本（不包含美术设计）或者对话、信息显示类脚本都会接受，系统太过庞大（例如战旗、音游、或者基于 SideView 的深度修改）的脚本则无能为力。</p>
           <p class="special-style">若需定制，请将相应的要求发送到我的邮箱：<a class="normal-link" href="mailto:miaowm5@gmail.com?subject=脚本定制&body=请附上详细的脚本定制要求，若能包含图片的话更佳">miaowm5@gmail.com</a></p>
+          <h2 class="card-inline-title special-style">目前忙碌状态中...</h2>
+          <p>因为目前现实生活中较为忙碌，加之手头还有多个定制，所以请做好定制脚本需要三周以上才能完成的心理准备。</p>
+          <p>如果急用脚本，可以考虑 6R 论坛的<a class="normal-link" href="http://rm.66rpg.com/forum-611-1.html">脚本定制专区</a><span>（仅提供该区链接，我不对他人的脚本定制质量负责）。</span></p>
         </div>
       </div>
       <div id="rule">
@@ -63,9 +68,8 @@
         <div class="card">
           <h2 class="card-inline-title">关于脚本的使用</h2>
           <ul>
-            <li>
-              这些定制脚本只适用于 RPG Maker Vx Ace 制作的游戏。
-            </li>
+            <li>当您向我提出定制委托时，即默认您已经阅读并同意以下所有协议。</li>
+            <li>这些定制脚本只适用于 RPG Maker Vx Ace 制作的游戏。</li>
             <li>
               脚本完成后，我会负责调整脚本与您当前游戏工程的兼容性，并教您使用整个脚本，请不用担心定制脚本无法使用，定制结束后，如果仍有不会的地方也可以直接给我留言，我会在看到后回复。调整脚本兼容只针对单个游戏，如果将这个脚本用于其他工程需要调整兼容性时我将收取一定的费用。
               <p>即：一个定制脚本只保证在当前的游戏工程中百分百可以使用，不保证在任何工程中都可以使用，免费调整脚本兼容性的服务只有一次</p>
