--- a/order.html
+++ b/order.html
@@ -95,6 +95,10 @@
             <li>脚本制作过程不建议追加其他的要求，请一开始就想好所有的内容。
               <p>视情况，我可能会针对你之后追加的要求收取额外的费用</p>
             </li>
+            <li>我只保证我的脚本与您当前的工程互相兼容，当插入了其他脚本后，已定制的脚本可能会因为与新插入的脚本冲突而无法使用。
+              <p>这种情况下，继续针对新脚本进行兼容性调整时我可能会收取额外的费用</p>
+              <p>请一开始就想好你的游戏需要哪些内容，需要哪些脚本</p>
+            </li>
             <li>
               脚本完成并付款后，除非脚本有重大问题无法使用，否则不接受退款。
             </li>
