--- a/order.html
+++ b/order.html
@@ -23,6 +23,7 @@
     }
     #introduce h2.card-inline-title.special-style{ color: #FF4800; }
     #introduce p span{ color: #999; }
+    #introduce .status{display: none;}
   </style>
   <script src='js/modernizr.js'></script>
 </head>
@@ -55,9 +56,13 @@
           <p>收费接受 RGSS3(RMVA) 脚本定制，脚本定制仅作为业余爱好，所以收费一般为一顿饭或几顿饭的价格，太过复杂、太过麻烦，需要花太多时间的脚本请容许我拒绝。
           一般界面UI类脚本（不包含美术设计）或者对话、信息显示类脚本都会接受，系统太过庞大（例如战旗、音游、或者基于 SideView 的深度修改）的脚本则无能为力。</p>
           <p class="special-style">若需定制，请将相应的要求发送到我的邮箱：<a target="_blank" class="normal-link" href="mailto:miaowm5@gmail.com?subject=脚本定制&body=请附上详细的脚本定制要求，若能包含图片的话更佳">miaowm5@gmail.com</a></p>
-          <h2 class="card-inline-title special-style">目前忙碌状态中...</h2>
-          <p>因为目前现实生活中较为忙碌，加之手头还有多个定制，所以请做好定制脚本需要三周以上才能完成的心理准备。</p>
-          <p>如果急用脚本，可以考虑 6R 论坛的<a target="_blank" class="normal-link" href="http://rm.66rpg.com/forum-611-1.html">脚本定制专区</a><span>（仅提供该区链接，我不对他人的脚本定制质量负责）。</span></p>
+
+          <div class="status">
+            <h2 class="card-inline-title special-style">目前忙碌状态中...</h2>
+            <p>因为目前现实生活中较为忙碌，加之手头还有多个定制，所以请做好定制脚本需要三周以上才能完成的心理准备。</p>
+            <p>如果急用脚本，可以考虑 6R 论坛的<a target="_blank" class="normal-link" href="http://rm.66rpg.com/forum-611-1.html">脚本定制专区</a><span>（仅提供该区链接，我不对他人的脚本定制质量负责）。</span></p>
+          </div>
+
         </div>
       </div>
       <div id="rule">
